--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,15 @@
 
 *.sqlite3
 *.sqlite3-journal
+
+# ---> macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
