--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,17 @@ Icon
 
 # Thumbnails
 ._*
+
+# ---> Cloud9
+# Cloud9 IDE - http://c9.io
+.c9revisions
+.c9
+
+# ignore these folders
+tmp
+temp
+.tmp
+.temp
+
+/glide
+/vendor/
